--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,7 @@
     @apply bg-background text-foreground;
   }
 }
+ins.adsbygoogle * {
+  background-color: transparent !important;
+  border-radius: 0.5rem !important;
+}
