--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,4 +76,6 @@
 }
 ins.adsbygoogle * {
   border-radius: 0.5rem !important;
+  background-color: transparent !important;
+  background: transparent !important;
 }
